--- a/IndyGo/www/index.html
+++ b/IndyGo/www/index.html
@@ -121,20 +121,16 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 <section id="two">
 </section>
 <script type="text/javascript" src="js/gtfsparser.js"></script>
+<script type="text/javascript" src="js/bikeshare.js"></script>
 <script>
     // This example requires the Places library. Include the libraries=places
     // parameter when you first load the API. For example:
     // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
 
+		var bus_or_bike = 1; // 1 for bike, 0 for bus
+
     var station_array = [];
-	var bus_array = [];
-
-		if (/indygo/.test(window.location.href)) {
-			console.log("Getting bus");
-		} else if (/bikeshare/.test(window.location.href)) {
-			console.log("Getting bike");
-		}
-
+		var bus_array = [];
 
     var station_array = [];
     var bus_array = [];
@@ -171,6 +167,12 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 		directionsService = new google.maps.DirectionsService;
 		directionsDisplay = new google.maps.DirectionsRenderer;
 		directionsDisplay.setMap(map);
+
+		if (/indygo/.test(window.location.href)) {
+			var livebus = readDropbox("https://dl.dropbox.com/s/o5ajnzozjend26q/gtfs_data.json?dl=1");
+		} else if (/bikeshare/.test(window.location.href)) {
+			var stats = getBikeStations(map);
+		}
 
 		origin_input = document.getElementById('origin-input');
 		destination_input = document.getElementById('destination-input');
@@ -241,11 +243,6 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 			});
 		}
 
-		var stats = getBikeStations(map);
-
-		var livebus = readDropbox("https://dl.dropbox.com/s/o5ajnzozjend26q/gtfs_data.json?dl=1");
-
-
 		// Try HTML5 geolocation.
 		if (navigator.geolocation) {
 			navigator.geolocation.getCurrentPosition(function(position) {
@@ -260,36 +257,9 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
 				// Search for current location placeId
 				geocodeLatLng(geocoder, map, pos, 'origin-input');
 
-				var closest = 99999;
-				var closeststation = 0;
-				for (var i = 0; i < station_array.length; i++) {
-					var distance_lat = pos.lat - station_array[i].getPosition().lat();
-					var distance_lng = pos.lng - station_array[i].getPosition().lng();
-					var distance = Math.sqrt(distance_lat * distance_lat + distance_lng * distance_lng);
-
-					if (distance < closest) {
-						closest = distance;
-						closeststation = i;
-					}
+				if (bus_or_bike == 1) {
+					getClosestBikeStation();
 				}
-
-				getBikeStatus(station_array[closeststation]);
-				openInfoBox(station_array[closeststation].getTitle(), station_array[closeststation].addr, station_array[closeststation].bikes_avail, station_array[closeststation].docks_avail);
-
-				directionsService.route({
-					origin: pos,
-					destination: station_array[closeststation].getPosition(),
-					travelMode: travel_mode
-				}, function(response, status) {
-					if (status === google.maps.DirectionsStatus.OK) {
-						directionsDisplay.setDirections(response);
-					} else {
-						window.alert('Directions request failed due to ' + status);
-					}
-				});
-
-				station_array[closeststation].setVisible(false);
-
 
 			}, function() {
 				handleLocationError(true, infoWindow, map.getCenter());
@@ -333,67 +303,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
                 'Error: Your browser doesn\'t support geolocation.');
     }
 
-    function getBikeStations(map) {
-        var xmlhttp = new XMLHttpRequest();
-        xmlhttp.open('GET', 'https://gbfs.bcycle.com/bcycle_pacersbikeshare/station_information.json', true);
-        xmlhttp.onreadystatechange = function() {
-            if (xmlhttp.readyState == 4) {
-                if(xmlhttp.status == 200) {
-                    var obj = JSON.parse(xmlhttp.responseText);
-                    createBikePins(map, obj.data);
-                    return obj.data;
-                }
-            }
-        };
-        xmlhttp.send(null);
-    }
 
-    function createBikePins(map, stations) {
-        for (i = 0; i < 27; i++) {
-            var myLatLng = {lat: stations.stations[i].lat, lng: stations.stations[i].lon};
-            var marker = new google.maps.Marker({
-                position: myLatLng,
-                map: map,
-                title: stations.stations[i].name,
-                //icon: 'images/BikeMarker.png',
-                station_id: stations.stations[i].station_id,
-                bikes_avail: 0,
-                docks_avail: 0,
-                addr: stations.stations[i].address,
-                i: i
-            });
-            station_array[i] = marker;
-
-            google.maps.event.addListener(marker, 'click', function () {
-                getBikeStatus(this);
-                map.panTo(this.position);
-                map.setCenter(this.position);
-                openInfoBox(this.getTitle(), this.addr, this.bikes_avail, this.docks_avail);
-                pos = this.position;
-                clickedStation = this.i;
-            });
-
-        }
-    }
-
-    function getBikeStatus(marker) {
-        var xmlhttp = new XMLHttpRequest();
-        xmlhttp.open('GET', 'https://gbfs.bcycle.com/bcycle_pacersbikeshare/station_status.json', false);
-        xmlhttp.onreadystatechange = function() {
-            if (xmlhttp.readyState == 4) {
-                if(xmlhttp.status == 200) {
-                    var obj = JSON.parse(xmlhttp.responseText);
-                    for (var i = 0; i < 27; i++) {
-                        if (obj.data.stations[i].station_id === marker.station_id) {
-                            marker.bikes_avail = obj.data.stations[i].num_bikes_available;
-                            marker.docks_avail = obj.data.stations[i].num_docks_available;
-                        }
-                    }
-                }
-            }
-        };
-        xmlhttp.send(null);
-    }
 
     function openInfoBox(title, addr, bikes, docks) {
         document.getElementById("mapContainer").style.height= '72vh';
