--- a/IndyGo/platforms/browser/www/index.html
+++ b/IndyGo/platforms/browser/www/index.html
@@ -75,7 +75,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
     // parameter when you first load the API. For example:
     // <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places">
 
-		var bus_or_bike; // 1 for bike, 0 for bus
+		var bus_or_bike = 1; // 1 for bike, 0 for bus
 
 		if (/indygo/.test(window.location.href)) {
 			bus_or_bike = 0;
