--- a/IndyGo/www/index.html
+++ b/IndyGo/www/index.html
@@ -56,11 +56,11 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
     <div id="stationInfor">
         <table>
             <tr>
-                <td id = "tLeft1" class="tLeft">11<br>Bikes</td>
-                <td id="infoBx" class="tRight" colspan="2" rowspan="2"><div class="tableTitle">[INSERT TITLE VAR]</div>[INSERT ADDRESS VAR]<br><span id="dist">[VAR]</span> Miles Away<br><div class="buttons"><pre><span onclick="closeInfoBox()">Close</span>                            <span onclick="infoBoxDirections()">Directions</span></pre></div></td>
+                <td id = "tLeft1" class="tLeft">11<br><span class="bikeDockTxt">Bikes</span></td>
+                <td id="infoBx" class="tRight" colspan="2" rowspan="2">Indy Pacers Bikeshare Station:<div class="tableTitle">[INSERT TITLE VAR]</div>[INSERT ADDRESS VAR]<br><span id="dist">[VAR]</span> Miles Away<br><div class="buttons"><pre><span onclick="closeInfoBox()">Close</span>                            <span onclick="infoBoxDirections()">Directions</span></pre></div></td>
             </tr>
-            <tr style="border-top: rgba(0, 46, 97, 1) 2px solid;">
-                <td id ="tLeft2" class="tLeft">12<br>Empty Docks</td>
+            <tr>
+                <td id ="tLeft2" class="tLeft">12<br><span class="bikeDockTxt">Empty Docks</span></td>
             </tr>
         </table>
     </div>
@@ -258,14 +258,14 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
     }
 
     function openInfoBox(title, addr, bikes, docks) {
-        document.getElementById("mapContainer").style.height= '72vh';
-        document.getElementById("map").style.height= '66%';
+        document.getElementById("mapContainer").style.height= '65vh';
+        document.getElementById("map").style.height= '58%';
 
-        document.getElementById("infoBx").innerHTML = "<div class='tableTitle'>"+title+"</div>"+addr+"<br><span id='dist'>N/A</span> Miles Away<br><div class='buttons'><pre><span onclick='closeInfoBox()'>Close</span>                            <span onclick='infoBoxDirections(true)'>Directions</span></pre></div>";
+        document.getElementById("infoBx").innerHTML = "Indy Pacers Bikeshare Station:<div class='tableTitle'>"+title+"</div>"+addr+"<br><span id='dist'>N/A</span> Miles Away<br><div class='buttons'><pre><span onclick='closeInfoBox()'>Close</span>                            <span onclick='infoBoxDirections(true)'>Directions</span></pre></div>";
         infoBoxDirections(false);
 
-        document.getElementById("tLeft1").innerHTML = "<span style='font-size:3em'>"+bikes+"</span><br>Bikes";
-        document.getElementById("tLeft2").innerHTML = "<span style='font-size:3em'>"+docks+"</span><br>Docks";
+        document.getElementById("tLeft1").innerHTML = "<span style='font-size:3em'>"+bikes+"</span><br><span class='bikeDockTxt'>Bikes</span>";
+        document.getElementById("tLeft2").innerHTML = "<span style='font-size:3em'>"+docks+"</span><br><span class='bikeDockTxt'>Docks</span>";
     }
 
     function closeInfoBox() {
