--- a/IndyGo/www/confirm.html
+++ b/IndyGo/www/confirm.html
@@ -36,8 +36,8 @@
 
                 <!-- <a href="generic.html">Profile</a> -->
             </li>
-            <li><a href="index.html">BikeShare</a></li>
-            <li><a href="bus.html">IndyGo</a></li>
+            <li><a href="?bikeshare">BikeShare</a></li>
+            <li><a href="?indygo">IndyGo</a></li>
             <li><a href="login.html">Payment</a></li>
         </ul>
     </nav>
