added refresh png and margingTop to index.html line 122

--- a/IndyGo/www/index.html
+++ b/IndyGo/www/index.html
@@ -115,9 +115,11 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
         var controlUI = document.createElement('div');
         //controlUI.style.backgroundColor = '#fff';
         controlUI.style.cursor = 'pointer';
-				controlUI.style.backgroundImage = 'url(images/refresh32.png)';
-				controlUI.style.width = '32px';
-				controlUI.style.height = '32px';
+				controlUI.style.backgroundImage = 'url(images/Refresh.png)';
+        // controlUI.style.backgroundColor = '#002E61';
+				controlUI.style.width = '61px';
+				controlUI.style.height = '55.5px';
+        controlUI.style.marginTop = '65px';
         controlUI.title = 'Click to recenter the map';
         controlDiv.appendChild(controlUI);
 
